...
                                                   android:id="@+id/snack_root"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context="co.innoshop.android.ui.orders.AddOrderTrackingProviderListFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar"/>

    <LinearLayout
        android:id="@+id/providersView"
        android:layout_width="0dp"
        android:layout_height="0dp"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addTrackingProviderList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

